test/FAIL/breakcmd/to_many_arguments/05_test_break.emu
#-#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="to many arguments"
#-------

break list 0x1000
